fixed overview spacing

--- a/tdc.css
+++ b/tdc.css
@@ -33,7 +33,13 @@ body{
     font-size: 14px;
     height:40px;
 }
+.title{ 
+    padding: 10px;
+    font-size: 14px;
+    height:20px;
+}
 .sub-title{
+    height:20px;
     font-size: 12px;
     color: grey;
 }
